A lot of changes + released for 1.19